Fixed overflow issue with large amount of columns on query grid

--- a/src/WebComponents/PersistentObjectDialog/persistent-object-dialog.scss
+++ b/src/WebComponents/PersistentObjectDialog/persistent-object-dialog.scss
@@ -25,7 +25,7 @@
     :host main {
         width: var(--vi-persistent-object-dialog-computed-width);
         max-width: 90vw;
-        max-height: 75vh;
+        max-height: 50vh;
     }
 }
 
@@ -34,7 +34,7 @@
     :host main {
         width: var(--vi-persistent-object-dialog-computed-width);
         max-width: 900px;
-        max-height: 75vh;
+        max-height: 50vh;
     }
 }
 
@@ -43,6 +43,6 @@
     :host main {
         width: var(--vi-persistent-object-dialog-computed-width);
         max-width: 1100px;
-        max-height: 75vh;
+        max-height: 50vh;
     }
 }
